Build swagger docs to pet endpoints
