# storage/api-docs/api-docs.json
@@ -117,7 +117,7 @@
                         }
                     },
                     "401": {
-                        "description": "Unauthorized",
+                        "description": "Unauthenticated",
                         "content": {
                             "application/json": {}
                         }
@@ -187,6 +187,144 @@
                     }
                 ]
             }
+        },
+        "/api/pets/my_pets": {
+            "get": {
+                "tags": [
+                    "My Pets"
+                ],
+                "summary": "Get User Pets",
+                "description": "Get the authenticated user pets",
+                "operationId": "977c936ba69625cf85e7b907557f16f1",
+                "responses": {
+                    "200": {
+                        "description": "Will return all user pets",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/pets": {
+            "post": {
+                "tags": [
+                    "My Pets"
+                ],
+                "summary": "Register a New Pet",
+                "description": "Creates a new pet for authenticated user",
+                "operationId": "9523721805529edb47b46332d56f2826",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "age",
+                                    "breed",
+                                    "specie"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "description": "Pet Name",
+                                        "type": "string"
+                                    },
+                                    "age": {
+                                        "description": "Pet Age",
+                                        "type": "string"
+                                    },
+                                    "breed": {
+                                        "description": "Pet Breed",
+                                        "type": "string"
+                                    },
+                                    "specie": {
+                                        "description": "Pet Specie (dog, cat, bird...)",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Pet Created",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/pets/{petId}": {
+            "get": {
+                "tags": [
+                    "My Pets"
+                ],
+                "summary": "Get User Single Pet",
+                "description": "Get the authenticated user single pet profile",
+                "operationId": "585e7638b2477aa2613bf6d11c8f9556",
+                "parameters": [
+                    {
+                        "name": "petId",
+                        "in": "path",
+                        "description": "ID of the pet to retrieve",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Will return a pet profile",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "404": {
+                        "description": "Pet not found",
+                        "content": {
+                            "application/json": {}
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "components": {
@@ -202,6 +340,10 @@
         {
             "name": "Authentication",
             "description": "Authentication"
+        },
+        {
+            "name": "My Pets",
+            "description": "My Pets"
         }
     ]
 }
